--- a/root/index.html
+++ b/root/index.html
@@ -16,8 +16,15 @@
 
 
 <body>
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+    </div>
+    
     <div id="map"></div>
-    Derp
 
+    
 </body>
 </html>
