--- a/root/index.html
+++ b/root/index.html
@@ -18,9 +18,7 @@
 <body>
     <div class="navbar">
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a href="pages/about.html">About</a>
     </div>
     
     <div id="map"></div>
